# kickstart-with-claude-code

./: .gitignore  .mcp.json  CCF-Certification.md  CLAUDE.md  Claude-Code-Architect-Certification.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: task-analyzer.md
.claude/skills/add-task/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/show-stats/: SKILL.md
src/task_manager/: __init__.py  __main__.py  cli.py  database.py  formatter.py  models.py
src/task_manager.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_database.py  test_models.py
